--- a/book4.html
+++ b/book4.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="Mainpage.html">Reading Travel</a></h1>
+        <h1><a href="index.html">Reading Travel</a></h1>
     </header>
     <div id="content">
         <img src="book4.jpg" alt="지적자본론">
