--- a/index.html
+++ b/index.html
@@ -7,32 +7,24 @@
     <meta name="description" content="Share your reading travel">
     <meta name="keyword" content="book, reading, organize, SNS">
     <meta name="author" content="Moon-Chaebin">
-    <title>역행자</title>
+    <title>Reading Travel</title>
     <style>
         header {
             border-bottom: solid black 1px;
-        }
-
-        #text {
-            border: solid 1px;
-            min-height: 20px;
-            height: fit-content;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Reading Travel</a></h1>
+        <h1>Reading Travel</h1>
     </header>
     <div id="content">
-        <img src="book3.jpg" alt="참을 수 없는 존재의 가벼움">
-        <div>
-            <input type="text" id="text">
-        </div>
+        <ul>
+            <li><a href="book1.html">이기적 유전자</a></li>
+            <li><a href="book2.html">참을 수 없는 존재의 가벼움</a></li>
+            <li><a href="book3.html">역행자</a></li>
+            <li><a href="book4.html">지적자본론</a></li>
+        </ul>
     </div>
-    <footer>
-        <a href="book2.html"><input type="button"></a> <-이전 책으로 이동
-        다음 책으로 이동 -> <a href="book4.html"><input type="button"></a>
-    </footer>
 </body>
 </html>
