--- a/book1.html
+++ b/book1.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="Mainpage.html">Reading Travel</a></h1>
+        <h1><a href="index.html">Reading Travel</a></h1>
     </header>
     <div id="content">
         <img src="book1.jpg" alt="selfish gene">
