--- a/book2.html
+++ b/book2.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="Mainpage.html">Reading Travel</a></h1>
+        <h1><a href="index.html">Reading Travel</a></h1>
     </header>
     <div id="content">
         <img src="book2.jpg" alt="참을 수 없는 존재의 가벼움">
