add Youtube video

--- a/book1.html
+++ b/book1.html
@@ -27,6 +27,9 @@
     </header>
     <div id="content">
         <img src="book1.jpg" alt="selfish gene">
+        <h3>관련 동영상</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SyGKk2a6OWs?si=nScE8gii8K1nO_5G" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <div>
             <input type="text" id="text">
         </div>
