--- a/book1.html
+++ b/book1.html
@@ -22,11 +22,17 @@
             border-bottom: solid black 1px;
         }
 
-        #text {
-            border: solid 1px;
-            min-height: 20px;
-            height: fit-content;
+        h1 {
+            font-size: 60px;
         }
+
+        body {
+            text-align: center;
+        }
+        ul, ol, li {
+            list-style: none;
+        }
+
 
     </style>
 </head>
