--- a/book3.html
+++ b/book3.html
@@ -18,14 +18,19 @@
     <meta name="author" content="Moon-Chaebin">
     <title>역행자</title>
     <style>
-        header {
+       header {
             border-bottom: solid black 1px;
         }
 
-        #text {
-            border: solid 1px;
-            min-height: 20px;
-            height: fit-content;
+        h1 {
+            font-size: 60px;
+        }
+
+        body {
+            text-align: center;
+        }
+        ul, ol, li {
+            list-style: none;
         }
     </style>
 </head>
