--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         header {
             border-bottom: solid black 1px;
         }
+
+        h1 {
+            font-size: 60px;
+        }
+
+        body {
+            text-align: center;
+        }
+        ul, ol, li {
+            list-style: none;
+        }
     </style>
 </head>
 <body>
