--- a/book1.html
+++ b/book1.html
@@ -25,15 +25,24 @@
         h1 {
             font-size: 60px;
         }
-
         body {
             text-align: center;
+            margin: 0;
         }
-        ul, ol, li {
+        ul {
+            text-align: left;
             list-style: none;
+            margin: 0;
+            padding: 10px;
+            border-right: solid 1px black;
         }
-
-
+        #grid {
+            display: grid;
+            grid-template-columns: 1fr 9fr;
+        }
+        #content {
+            border-bottom: solid 1px black;
+        }
     </style>
 </head>
 <body>
@@ -41,30 +50,32 @@
         <h1><a href="index.html">Reading Travel</a></h1>
     </header>
     <div id="content">
-        <img src="book1.jpg" alt="selfish gene">
-        <h3>관련 동영상</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SyGKk2a6OWs?si=nScE8gii8K1nO_5G" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://reading-travel.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <div id="grid">
+            <ul>
+                <li><a href="book1.html">이기적 유전자</a></li>
+                <li><a href="book2.html">참을 수 없는 존재의 가벼움</a></li>
+                <li><a href="book3.html">역행자</a></li>
+                <li><a href="book4.html">지적자본론</a></li>
+            </ul>
+            <div>
+                <img src="book1.jpg" alt="selfish gene">
+                <h3>관련 동영상</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SyGKk2a6OWs?si=nScE8gii8K1nO_5G" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
     </div>
+    <div id="disqus_thread"></div>
+    <script>
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://reading-travel.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    
     <footer>
         다음 책으로 이동 -> <a href="book2.html"><input type="button"></a>
     </footer>
