--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         body {
             text-align: center;
+            margin: 0;
         }
         ul, ol, li {
             list-style: none;
